samples/_failures_safe/1761394717_9cc54e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84168999.c: In function ‘main’:
./samples/SAFE/__tmp_84168999.c:145: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_84168999.c:144:20: note: to match this ‘(’
  144 |             fprintf(stderr
      |                    ^
./samples/SAFE/__tmp_84168999.c:144:13: error: too few arguments to function ‘fprintf’
  144 |             fprintf(stderr
      |             ^~~~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_84168999.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:77:1: note: declared here
   77 | fprintf (FILE *__restrict __stream, const char *__restrict __fmt, ...)
      | ^~~~~~~
./samples/SAFE/__tmp_84168999.c:144:13: error: expected declaration or statement at end of input
  144 |             fprintf(stderr
      |             ^~~~~~~
./samples/SAFE/__tmp_84168999.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_84168999.c:144:13: error: expected declaration or statement at end of input
